<resources>
    <string name="app_name">Application2</string>

    <string name="string_reg">Registration</string>
    <string name="string_reg_info">Personal info</string>
    <string name="st_name">Name</string>
    <string name="st_gender">Gender</string>
    <string name="st_male">Male</string>
    <string name="st_female">Female</string>
    <string name="st_age">Age</string>
    <string name="st_contact">Contact</string>
    <string name="st_password">       Password</string>

    <string name="st_address">Address</string>
    <string name="st_state">State</string>
    <string name="st_district">District</string>
    <string name="st_gram">Grampanchayat</string>
    <string name="st_village">Village</string>
    <string name="st_aadhar">Aadhar Number</string>
    <string name="st_imei1">IMEI1</string>
    <string name="st_imei2">IMEI2</string>
    <string name="st_signup">Sign Up</string>


    <!-- Login page-->
    <string name="st_welcome">WELCOME BACK</string>
    <string name="st_login_message">Please log in to get Started</string>
    <string name="st_signin">SIGN IN</string>
    <string name="st_rem_password">Remember Password</string>
    <string name="st_acc_message">Don't have an account? </string>
    <string name="st_space">     </string>
</resources>
