<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/color_bg_register"
            android:gravity="start"
            android:text="@string/string_reg"
            android:textColor="@color/color_text_register"
            android:textSize="30sp"
            android:visibility="visible"
            android:layout_weight="0.09"
                        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:text="@string/string_reg_info"
        android:textColor="@color/color_default"
        android:gravity="fill_horizontal"
        android:textSize="15sp"
        android:textStyle="bold"
        />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/st_name"
            android:textColor="@color/color_default"
            android:layout_weight="0.059"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.059"
        android:text="@string/st_gender"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/color_default"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:orientation="horizontal"
        >

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/st_female"
        />

     <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/st_male"
      />
    </RadioGroup>

    <EditText

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/st_age"
        android:textColor="@color/color_default"
        android:layout_weight="0.06"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/st_contact"
        android:textColor="@color/color_default"
        android:layout_weight="0.06"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/st_password"
        android:textColor="@color/color_default"
        android:layout_weight="0.059"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:text="@string/st_address"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/color_default"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:text="@string/st_state"
        android:textSize="15sp"
        android:textColor="@color/color_default"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:text="@string/st_district"
        android:textSize="15sp"
        android:textColor="@color/color_default"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:text="@string/st_gram"
        android:textSize="15sp"
        android:textColor="@color/color_default"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:text="@string/st_village"
        android:textSize="15sp"
        android:textColor="@color/color_default"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06">
    </Spinner>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/st_aadhar"
        android:textColor="@color/color_default"
        android:layout_weight="0.06"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/st_imei1"
        android:textColor="@color/color_default"
        android:layout_weight="0.06"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/st_imei2"
        android:textColor="@color/color_default"
        android:layout_weight="0.06"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/st_signup"
            android:textColor="@color/color_text_register"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/btm_rounded"
            android:layout_weight="0.08"/>
</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>