<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_gradient"
    android:weightSum="1">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contentDescription="TODO"
        android:src="@drawable/splashimage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:gravity="center"
        android:text="@string/st_welcome"
        android:textColor="@color/color_default"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:gravity="center"
        android:text="@string/st_login_message"
        android:textColor="@color/color_default"
        android:textSize="15sp"
        android:visibility="visible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.1"
        android:drawableStart="@drawable/phone"
        android:hint="@string/st_contact"
        android:textColor="@color/color_default" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.1"
        android:drawableStart="@drawable/lock"
        android:hint="@string/st_password"
        android:textColor="@color/color_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/st_signin"
        android:textColor="@color/color_text_register"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/btm_rounded"
        android:layout_weight="0.08"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:gravity="center"
        android:text="@string/st_rem_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/st_acc_message"
        android:textColor="@color/color_bg_register"
        android:textSize="15sp"
        android:visibility="visible" />
</LinearLayout>